fix the flickering hover in social icons

--- a/src/components/Carousel/carousel.module.css
+++ b/src/components/Carousel/carousel.module.css
@@ -39,6 +39,10 @@
   justify-content: space-between;
 }
 
+.slide_direction > * > svg {
+  display: block;
+}
+
 .left,
 .right {
   position: absolute;
